Update mod to Minecraft 1.20.6